--- a/evaluator copy.ipynb
+++ b/evaluator copy.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -243,7 +243,8 @@
    "source": [
     "import string\n",
     "for num, (position, comment) in enumerate(Comments):\n",
-    "    position = position[39:]\n",
+    "    #position = position[39:]\n",
+    "    # comment = comment[39:]\n",
     "    # alphabet = string.ascii_letters + string.digits + \"/\\\\\"\n",
     "    # for i in range(len(comment)):\n",
     "    #     if comment[i] not in alphabet:\n",
@@ -259,6 +260,10 @@
     "        if abs(y - num) < len(Comments) / 100:\n",
     "            correct += 1\n",
     "            break\n",
+    "    # miny = abs(q - num)\n",
+    "    # if abs(q - num) < len(Comments) / 100:\n",
+    "    #     correct += 1\n",
+    "\n",
     "    plotx.append(num)\n",
     "    ploty.append(miny)\n",
     "    if num % 100 == 1:\n",
@@ -269,7 +274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
